--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <h2>Cursos Extracurriculares</h2>
                     <div id="espaco1"></div>
                     <h3>SweetGum</h3>
-                    <p>Formação de Operador de empilhadeira| Concluído: 2020</p>
+                    <p>Formação de Operador de empilhadeira | Concluído: 2020</p>
                     <div id="espaco1"></div>
                     <h3>Prepara Todos</h3>
                     <p>Curso de Power BI | Concluído: 2020</p>
@@ -51,6 +51,11 @@
                     <h3>Udemy</h3>
                     <p>Excel Básico Avançado 5 Cursos - Formação Especialista | Concluído: 2020</p>
                     <p>Arquitetura de Redes | Concluído: 2020</p>
+                    <p>O curso completo de banco de Dados e SQL, sem mistério! | Em andamento</p>
+                    <p>Gerenciamento de Estoque - (Processos + Controle) | Em andamento</p>
+                    <div id="espaco1"></div>
+                    <h3>Data Science Academy</h3>
+                    <p>Microsoft Power BI para Data science, Versão 2.0 | Em andamento</p>
                 </div>
                 <div id="atividades">
                     <h2>Atividades Voluntárias</h2>
